feat: add code to convert to regex

--- a/src/morphological_analysis.ipynb
+++ b/src/morphological_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45b128ae",
    "metadata": {},
    "outputs": [],
@@ -30,11 +30,11 @@
     "[[(የ,በ,ከ,ስለ)+[{ግድያ}+(ኤ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)]+(ም,ስ)]]\n",
     "[(የ)+{ግድያ}+(ኤ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
     "\n",
-    "[(የ,በ,ከ,ስለ)+[[{ገዳይ}]+(ም,ስ,ን)]]\n",
+    "[(የ,በ,ከ,ስለ)+[[{ገዳይ}]+(ም,ስ)]]\n",
     "[[(የ,በ,ከ,ስለ)+[{ገዳይ}+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ም,ስ)]]\n",
     "[(የ)+{ገዳይ}+(ኤ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
     "\n",
-    "[(የ,በ,ከ,ስለ)+[[(ተ)+{ገዳይ}]+(ም,ስ,ን)]]\n",
+    "[(የ,በ,ከ,ስለ)+[[(ተ)+{ገዳይ}]+(ም,ስ)]]\n",
     "[[(የ,በ,ከ,ስለ)+[(ተ)+{ገዳይ}+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ም,ስ)]]\n",
     "[(የ)+(ተ)+{ገዳይ}+(ኤ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
     "\n",
@@ -366,6 +366,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9677e1a",
+   "metadata": {},
+   "source": [
+    "### Conversion to RegEx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "64990de8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated regex:\n",
+      "['(?:የ|በ|ከ|ስለ)(?:?:ግድያ)', '(?:የ)(?:?:ግድያ)(?:ን)', '(?:የ|በ|ከ|ስለ)(?:?:ግድያ)(?:ም|ስ)', '(?:የ|በ|ከ|ስለ)(?:?:ግድያ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ው|ዋ|አቸው)(?:ም|ስ)', '(?:የ)(?:?:ግድያ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ው|ዋ|አቸው)(?:ን)', '(?:የ|በ|ከ|ስለ)(?:?:ገዳይ)(?:ም|ስ)', '(?:የ|በ|ከ|ስለ)(?:?:ገዳይ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ም|ስ)', '(?:የ)(?:?:ገዳይ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ው|ዋ|አቸው)(?:ን)', '(?:የ|በ|ከ|ስለ)(?:ተ)(?:?:ገዳይ)(?:ም|ስ)', '(?:የ|በ|ከ|ስለ)(?:ተ)(?:?:ገዳይ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ም|ስ)', '(?:የ)(?:ተ)(?:?:ገዳይ)(?:ኤ|አችን|ህ|ሽ|አችሁ|ው|ዋ|አቸው)(?:ን)', '(?:?:ገድዬ)(?:አለሁ)', '(?:?:ገድል)(?:ኧን|ኧህ|ኧሽ|አችሁ|ኦ|ኧው)(?:አል)', '(?:?:ገድል)(?:አ)(?:አለች)', '(?:?:ገድዬ)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አለሁ)', '(?:?:ገድል)(?:ኧን)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አል)', '(?:?:ገድል)(?:ኧህ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:አል)', '(?:?:ገድል)(?:ኧሽ)(?:ኝ|ን|ው|አት|አቸው)(?:አል)', '(?:?:ገድል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:አል)', '(?:?:ገድል)(?:ኦ|ኧው)(?:ኝ|ን|ህ|ሽ|አችሁ|ት|አት|አቸው)(?:አል)', '(?:?:ገድል)(?:አ)(?:ኝ|ን|ህ|ሽ|አችሁ|ው|ት|አቸው)(?:አለች)', '(?:አስ)(?:?:ገድዬ)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አለሁ)', '(?:አስ)(?:?:ገድል)(?:ኧን)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አል)', '(?:አስ)(?:?:ገድል)(?:ኧህ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:አል)', '(?:አስ)(?:?:ገድል)(?:ኧሽ)(?:ኝ|ን|ው|አት|አቸው)(?:አል)', '(?:አስ)(?:?:ገድል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:አል)', '(?:አስ)(?:?:ገድል)(?:ኦ|ኧው)(?:ኝ|ን|ህ|ሽ|አችሁ|ት|አት|አቸው)(?:አል)', '(?:አስ)(?:?:ገድል)(?:አ)(?:ኝ|ን|ህ|ሽ|አችሁ|ው|ት|አቸው)(?:አለች)', '(?:ስ|ስን|ሳል|ሳን|ብ|ብን|ባል|ባን)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:ሲ|ስት|ሳይ|ሳት|ቢ|ብት|ባይ|ባት)(?:?:ገድል)(?:ኧኝ|ኧን|ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:ሲ|ሳይ|ቢ|ባይ)(?:?:ገድል)(?:ኡ)(?:ህ|ሽ|አችሁ)(?:ም)', '(?:ሲ|ስት|ሳይ|ሳት|ቢ|ባ|ባት)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:ስት|ሳት|ብት|ባት)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:ስ|ስን|ሳል|ሳን|ብ|ብን|ባል|ባን)(?:አስ)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:ሲ|ስት|ሳይ|ሳት|ቢ|ብት|ባይ|ባት)(?:አስ)(?:?:ገድል)(?:ኧኝ|ኧን|ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:ሲ|ሳይ|ቢ|ባይ)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ህ|ሽ|አችሁ)(?:ም)', '(?:ሲ|ስት|ሳይ|ሳት|ቢ|ባ|ባት)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:ስት|ሳት|ብት|ባት)(?:አስ)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:እ)(?:?:ገድል)(?:አለሁ)', '(?:እን)(?:?:ገድል)(?:አለን)', '(?:ት)(?:?:ገድል)(?:አለህ)', '(?:ት)(?:?:ገድይ)(?:አለሽ)', '(?:ት)(?:?:ገድል)(?:አላችሁ)', '(?:ይ)(?:?:ገድል)(?:አል)', '(?:ት)(?:?:ገድል)(?:አለች)', '(?:ይ)(?:?:ገድል)(?:አል)(?:ኡ)', '(?:እ)(?:?:ገድል)(?:አችሁ|ህ|ሽ|ኧው|አት|አቸው)(?:አለሁ)', '(?:እን)(?:?:ገድል)(?:አችሁ|ህ|ሽ|ኧው|አት|አቸው)(?:አለን)', '(?:ት)(?:?:ገድል)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:አለህ)', '(?:ት)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)(?:አለሽ)', '(?:ት)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:አላችሁ)', '(?:ይ)(?:?:ገድል)(?:ኧኝ|ኧን|ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አል)', '(?:ት)(?:?:ገድል)(?:ኧኝ|ኧን|ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:አለች)', '(?:ይ)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ህ|ሽ|አችሁ|ኡት|አት|አቸው)(?:አል)', '(?:አል|አን|አት|አይ)(?:?:ገድል)(?:ም)', '(?:አይ|አት)(?:?:ገድል)(?:ኡ)(?:ም)', '(?:አት)(?:?:ገድይ)(?:ም)', '(?:አል|አን|አት|አይ)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:አት|አይ)(?:?:ገድል)(?:ኧኝ|ኧን)(?:ም)', '(?:አይ)(?:?:ገድል)(?:ኡ)(?:ህ|ሽ|አችሁ)(?:ም)', '(?:አይ|አት)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:አት)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:አል|አን|አት|አይ)(?:አስ)(?:?:ገድል)(?:ም)', '(?:አት|አይ)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ም)', '(?:አት)(?:አስ)(?:?:ገድይ)(?:ም)', '(?:አል|አን|አት|አይ)(?:አስ)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:አት|አይ)(?:አስ)(?:?:ገድል)(?:ኧኝ|ኧን)(?:ም)', '(?:አይ)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ህ|ሽ|አችሁ)(?:ም)', '(?:አይ|አት)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:አት)(?:አስ)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:ተ)(?:?:ገድዬ)(?:አለሁ)', '(?:ተ)(?:?:ገድል)(?:አ)(?:አለች)', '(?:ተ)(?:?:ገድል)(?:ኧን|ኧህ|ኧሽ|አችሁ|ኦ|ኧው)(?:አል)', '(?:እንዳል|እንዳን)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:እንዳት|እንዳይ)(?:?:ገድል)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:እንዳት)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)', '(?:እንዳት|እንዳይ)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)', '(?:እንዳል|እንዳን)(?:አስ)(?:?:ገድል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:እንዳት|እንዳይ)(?:አስ)(?:?:ገድል)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:እንዳት)(?:አስ)(?:?:ገድይ)(?:ኝ|ን|ው|አት|አቸው)', '(?:እንዳት|እንዳይ)(?:አስ)(?:?:ገድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)', '(?:መ|አለመ)(?:?:ገደል)(?:ን|ም|ስ)', '(?:መ|አለመ)(?:?:ገደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን|ም|ስ)', '(?:መ|አለመ)(?:?:ገደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን)(?:ም|ስ)', '(?:መ|አለመ)(?:አስ)(?:?:ገደል)(?:ን|ም|ስ)', '(?:መ|አለመ)(?:አስ)(?:?:ገደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን|ም|ስ)', '(?:መ|አለመ)(?:አስ)(?:?:ገደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን)(?:ም|ስ)', '(?:ከ)(?:መ|አለመ)(?:?:ገደል)(?:ም|ስ)', '(?:ከ)(?:መ|አለመ)(?:አስ)(?:?:ገደል)(?:ም|ስ)', '(?:እ)(?:?:ገደል)(?:አለሁ)', '(?:እን)(?:?:ገደል)(?:አለን)', '(?:ት)(?:?:ገደል)(?:አለህ)', '(?:ት)(?:?:ገደይ)(?:አለሽ)', '(?:ት)(?:?:ገደል)(?:አላችሁ)', '(?:ይ)(?:?:ገደል)(?:አል)', '(?:ት)(?:?:ገደል)(?:አለች)', '(?:ይ)(?:?:ገደል)(?:አሉ)', '(?:አል|አን|አይ|አት)(?:?:ገደል)(?:ም)', '(?:ይ|ተ|አይ|አት)(?:?:ገደል)(?:ኡ)(?:ም)', '(?:ተ|አት)(?:?:ገደይ)(?:ም)', '(?:አል|አልተ)(?:?:ገደል)(?:ኩም|ንም|ክም|ሽም|አችሁም|ኧም|ኧችም|ኡም)', '(?:ሳል|ሳን|ሳይ|ሳት)(?:?:ገደል)', '(?:ሳት)(?:?:ገደይ)', '(?:ሳት|ሳይ)(?:?:ገደል)(?:ኡ)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ኩ)(?:ህ|ሽ|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ን)(?:ህ|ሽ|ኧው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ኧ|ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ኩ)(?:ህ|ሽ|ት|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ን)(?:ህ|ሽ|ኧው|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ኧ|ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:?:ገደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:ተ)(?:?:ገደል)(?:ኩ|ን|ክ|ሽ|አችሁ|ኧ|ኧች|ኡ)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:ተ)(?:?:ገደል)(?:ኩ|ን|ክ|ሽ|አችሁ|ኧ|ኧች|ኡ)(?:ም)', '(?:ከ|ስለ)(?:አል)(?:ተ)(?:?:ገደል)(?:ኩ|ን|ክ|ሽ|አችሁ|ኧ|ኧች|ኡ)', '(?:አት)(?:?:ግደይ)(?:ኝ|ን|ው|አት|አቸው)', '(?:አት)(?:?:ግደል)(?:ኡ)(?:ኝ|ን|ው|አት|አቸው)', '(?:አ)(?:ል|እን)(?:?:ግደል)(?:ህ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:አ)(?:ይ|ት)(?:?:ግደል)(?:ኧኝ|ኧን|ህ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:አ)(?:ይ)(?:?:ግደል)(?:ኡ)(?:ኝ|ን|ው|አት|አቸው)', '(?:መ|አለመ)(?:?:ግደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን)', '(?:ከ|የ|ስለ)(?:መ|አለመ)(?:?:ግደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)', '(?:ሳ|ሳላ|ባ|ባላ)(?:?:ጋድል)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ስና|ሳና|ብና|ባና)(?:?:ጋድል)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:ስታ|ሳታ|ብታ|ባታ)(?:?:ጋድል)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:ስታ|ሳታ|ብታ|ባታ)(?:?:ጋድይ)(?:ኝ|ን|ው|አት|አቸው)', '(?:ስታ|ሳታ|ብታ|ባታ)(?:?:ጋድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)', '(?:ሲያ|ሳያ|ቢያ|ባያ)(?:?:ጋድል)(?:ኧኝ|ኧን|ክ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:ሲያ|ሳያ|ቢያ|ባያ)(?:?:ጋድል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:ተ|አ)(?:?:ጋድዬ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧን)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧህ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧሽ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:አችሁ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኦ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:አ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድዬ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧህ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኦ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:አ)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋድል)(?:ኧው)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ጋደል)(?:ኩ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ኧ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ተ|አ)(?:?:ጋደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኩ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ን)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ክ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ሽ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:አችሁ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧች)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኡ)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኩ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም)', '(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ኩ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ኧ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:ተ|አ)(?:?:ጋደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኩ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኧች)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)', '(?:ስለ|የ|በ|ከ)(?:አል)(?:ተ|አ)(?:?:ጋደል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)', '(?:አ|መ|አለመ)(?:?:ገዳደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን)', '(?:በ|የ|ከ|ስለ)(?:አ|መ|አለመ)(?:?:ገዳደል)(?:ኤ|አችን|ህ|ሽ|አችሁ|ኡ|ኋ|አቸው)(?:ን)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኩ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ን)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ክ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ሽ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:አችሁ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧች)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኡ)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኩ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ን)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ክ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ሽ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:አችሁ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧች)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኡ)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኩ)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ን)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧ)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኧች)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)', '(?:እየ|በ|ከ|ስለ)(?:?:ገዳደል)(?:ኡ)(?:ኝ|ን|ህ|ሽ|ት|አት|አቸው)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ኩ)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ን)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ኧ)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ኧች)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:እየ|ከ|ስለ)(?:?:ገዳደል)(?:ኡ)(?:ኝ|ን|ህ|ሽ|ት|አት|አቸው)(?:ም)', '(?:እየ|በ|ከ|ስለ)(?:ተ)(?:?:ገዳደል)(?:ኩ|ን|ክ|ሽ|አችሁ|ኧ|ኧች|ኡ)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ኩ)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ን)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ኧ)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ኧች)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:እየ|የ|ስለ|ከ|በ)(?:አ)(?:?:ገዳደል)(?:ኡ)(?:ኝ|ን|ህ|ሽ|ት|አት|አቸው)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኩ)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ን)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ክ)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ሽ)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:አችሁ)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኧ)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኧች)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኡ)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኩ)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ን)(?:ህ|ሽ|አችሁ|ት|አት|አቸው)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ክ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም))', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኧ)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኧች)(?:ኝ|ን|ህ|ሽ|ው|አት|አቸው)(?:ም)', '(?:የ|ስለ|ከ|በ)(?:አላ)(?:?:ገዳደል)(?:ኡ)(?:ኝ|ን|ህ|ሽ|ት|አት|አቸው)(?:ም)', '(?:?:ገዳድዬ)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧን)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧህ)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧሽ)(?:ም|ስ)', '(?:?:ገዳድል)(?:አችሁ)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኦ)(?:ም|ስ)', '(?:?:ገዳድል)(?:አ)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧው)(?:ም|ስ)', '(?:?:ገዳድዬ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧህ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኦ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:አ)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:?:ገዳድል)(?:ኧው)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድዬ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:ኧን)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:ኧህ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:ኧሽ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:አችሁ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:ኦ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:አ)(?:ም|ስ)', '(?:ተ|አ)(?:?:ገዳድል)(?:ኧው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድዬ)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:ኧን)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:ኧህ)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:ኧሽ)(?:ኝ|ን|ው|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:አችሁ)(?:ኝ|ን|ት|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:ኦ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:አ)(?:ኝ|ን|ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:አ)(?:?:ገዳድል)(?:ኧው)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)', '(?:ሳ|ሳላ)(?:?:ገዳድል)(?:ክ|ሽ|አችሁ|ው|አት|አቸው)(?:ም|ስ)', '(?:ስና|ሳና)(?:?:ገዳድል)(?:ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም|ስ)', '(?:ስታ|ሳታ)(?:?:ገዳድል)(?:ኧኝ|ኧን|ኧው|አት|አቸው)(?:ም|ስ)', '(?:ስታ|ሳታ)(?:?:ገዳድይ)(?:ኝ|ን|ው|አት|አቸው)(?:ም|ስ)', '(?:ስታ|ሳታ)(?:?:ገዳድል)(?:ኡ)(?:ኝ|ን|ት|አት|አቸው)(?:ም|ስ)', '(?:ሲያ|ሳያ)(?:?:ገዳድል)(?:ኧኝ|ኧን|ክ|ሽ|አችሁ|ኧው|አት|አቸው)(?:ም|ስ)', '(?:ሲያ|ሳያ)(?:?:ገዳድል)(?:ኡ)(?:ኝ|ን|ክ|ሽ|አችሁ|ት|አት|አቸው)(?:ም|ስ)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def convert_rule(rule: str) -> str:\n",
+    "    # Strip all square brackets and whitespace\n",
+    "    text = rule.replace('[', '').replace(']', '').replace(' ', '')\n",
+    "\n",
+    "    # Replace stem groups {a,b,...} -> non-capturing group (?:a|b|...)\n",
+    "    def stem_repl(m: re.Match) -> str:\n",
+    "        options = m.group(1).split(',')\n",
+    "        return f\"(?:{'|'.join(options)})\"\n",
+    "\n",
+    "    text = re.sub(r\"\\{([^}]+)\\}\", stem_repl, text)\n",
+    "\n",
+    "    # Replace affix groups (a,b,...) -> non-capturing group (?:a|b|...)\n",
+    "    def affix_repl(m: re.Match) -> str:\n",
+    "        options = m.group(1).split(',')\n",
+    "        return f\"(?:{'|'.join(options)})\"\n",
+    "\n",
+    "    text = re.sub(r\"\\(([^)]+)\\)\", affix_repl, text)\n",
+    "\n",
+    "    # Remove concatenation markers\n",
+    "    text = text.replace('+', '')\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "input_patterns = [line.strip() for line in raw_patterns.strip().splitlines() if line.strip()]\n",
+    "\n",
+    "# Process each pattern\n",
+    "patterns = [convert_rule(r) for r in input_patterns]\n",
+    "combined = '^(' + '|'.join(patterns) + ')$'\n",
+    "\n",
+    "# Print the combined regex\n",
+    "print('Generated regex:')\n",
+    "print(patterns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ce7fe32",
    "metadata": {},
    "source": [
@@ -374,14 +435,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f4c5a774",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  prefix_1 prefix_2 prefix_3 stem suffix_1 suffix_2 suffix_3 full_word\n",
+      "0                          የ  ግድያ                                 የግድያ\n",
+      "1                          በ  ግድያ                                 በግድያ\n",
+      "2                          ከ  ግድያ                                 ከግድያ\n",
+      "3                         ስለ  ግድያ                                ስለግድያ\n",
+      "4                          የ  ግድያ        ን                       የግድያን\n",
+      "5                          የ  ግድያ        ም                       የግድያም\n",
+      "6                          የ  ግድያ        ስ                       የግድያስ\n",
+      "7                          በ  ግድያ        ም                       በግድያም\n",
+      "8                          በ  ግድያ        ስ                       በግድያስ\n",
+      "9                          ከ  ግድያ        ም                       ከግድያም\n"
+     ]
+    }
+   ],
    "source": [
     "import itertools\n",
     "import pandas as pd\n",
-    "import re\n",
     "\n",
     "# Regex to split into segments, ignoring separators\n",
     "SEG_RE = re.compile(r'(\\{[^}]*\\}|\\([^)]*\\)|[^(){}\\[\\],+]+)')\n",
@@ -468,10 +546,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e9ce60a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of words generated: 4473 unique words\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Total number of words generated: {df.__len__()} unique words\")"
    ]
@@ -486,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a23827c",
    "metadata": {},
    "outputs": [],
@@ -511,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
